@@ -1,2 +1,3 @@
-  * Two factor authentication now works again
+  * Fixed a dial bug
+  * Delete inbox entry
 
